Fix text alignment

--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -52,6 +52,10 @@
     color: $gray;
   }
 
+  .text {
+    text-align: justify;
+  }
+
   .lighter li {
     color: $gray;
   }
